Bug 496573. Fix font load failure for fonts with family/fullname mismatch. r=vlad