gfx/thebes/public/gfxFontUtils.h
@@ -292,6 +292,14 @@ public:
 
 #define TRUETYPE_TAG(a, b, c, d) ((a) << 24 | (b) << 16 | (c) << 8 | (d))
 
+// used for overlaying name changes without touching original font data
+struct FontDataOverlay {
+    // overlaySrc != 0 ==> use overlay
+    PRUint32  overlaySrc;    // src offset from start of font data
+    PRUint32  overlaySrcLen; // src length
+    PRUint32  overlayDest;   // dest offset from start of font data
+};
+    
 class THEBES_API gfxFontUtils {
 
 public:
@@ -332,6 +340,7 @@ public:
              PRPackedBool& aUnicodeFont, PRPackedBool& aSymbolFont);
 
 #ifdef XP_WIN
+
     // given a TrueType/OpenType data file, produce a EOT-format header
     // for use with Windows T2Embed API AddFontResource type API's
     // effectively hide existing fonts with matching names aHeaderLen is
@@ -339,7 +348,7 @@ public:
     // EOT header on output
     static nsresult
     MakeEOTHeader(const PRUint8 *aFontData, PRUint32 aFontDataLength,
-                  nsTArray<PRUint8> *aHeader);
+                  nsTArray<PRUint8> *aHeader, FontDataOverlay *aOverlay);
 #endif
 
     // checks for valid SFNT table structure, returns true if valid
